tests/success/00-basics/MutuallyRecursiveType.vix
type a = A1 | A2 b
type b = B1 | B2 (ptr a)
