tests/type-error/OccursCheck.vix
boxed
type List a = Nil | Cons a (List a)

test MkUnit = Cons (test MkUnit) Nil
